# SDL3_Template_Project

./: .gitignore  README.md  build.py  meson.build  pyproject.toml
.github/workflows/: ci.yml
include/: Entity.hpp  Input.hpp  VectorFuncs.hpp
src/: Entity.cpp  Input.cpp  VectorFuncs.cpp  main.cpp
